# iniparser_old

./: .gitignore  CMakeLists.txt  Makefile  README.md  inifile.c  iniparser.c  iniparser.h
